# CodeProblemsSolutions

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp
source/CodeWars/: Declarations.h
source/CodeWars/2ndKyu/: Declarations.h  PointerMonster.cpp
source/CodeWars/3rdKyu/: BoolFuck.cpp  Declarations.h
source/CodeWars/4thKyu/: Declarations.h  FormatDuration.cpp  HammingNumbers.cpp  MysteryFunction.cpp  Snail.cpp  SumByFactors.cpp  SumStrings.cpp
source/CodeWars/5thKyu/: Brainfuck.cpp  CaesarCipher.cpp  Check1800.cpp  Declarations.h  IncrementString.cpp  MoveZeroes.cpp  PhoneDirectory.cpp  ROT13.cpp  SquaredStrings.cpp
source/CodeWars/5thKyu/Check1800/: Check1800.cpp  Check1800_2.cpp  Words.h
source/CodeWars/6thKyu/: AmountOfPages.cpp  BitLetter.cpp  BreakTheWeb.cpp  CreatePhoneNumber.cpp  Declarations.h  DeleteDigit.cpp  EmptyString.cpp  FruitMachine.cpp  IpToInt32.cpp  LucasNumber.cpp  MissingInArithmeticProgression.cpp  MobiusFunction.cpp  SchrodingersBoolean.cpp  SimpleMissingSum.cpp  TwoSum.cpp
source/CodeWars/6thKyu/BlockPrint/: Alphabet.h  BlockPrint.cpp
source/LeetCode/: Declarations.h
source/LeetCode/Easy/: AddBinary.cpp  Declarations.h  HammingWeight.cpp  IsPalindrome.cpp  LongestCommonPrefix.cpp  PalindromeNumber.cpp  PlusOne.cpp  RemoveElement.cpp  ReverseBits.cpp  RomanToInteger.cpp  SingleNumber.cpp  TitleToNumber.cpp  TwoSum.cpp
source/LeetCode/Normal/: AddTwoNumbers.cpp  Declarations.h  DivideTwoIntegers.cpp  IntegerToRoman.cpp  LetterCombinations.cpp  MyAtoi.cpp  ReverseInteger.cpp
source/LeetCode/Normal/MyAtoi/: MyAtoi.cpp  MyAtoi_2.cpp
